# slave_basic_firmware

./: LICENSE  README.md  custom_targets.json  main.cpp  mbed_app.json
TARGET_STM32G071GBU6/: CMakeLists.txt  PinNames.h
include/: i2c_framework.h
source/: i2c_framework.cpp
